[package]
name = "css3-selector"
version = "0.1.3"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Protryon/css3-selector"
description = "A CSS3 selector parser"
keywords = [ "css", "css3", "selector", "parser", "dom" ]

[dependencies]
lazy_static = "1.4.0"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
